--- a/ResultWindow.axaml
+++ b/ResultWindow.axaml
@@ -5,7 +5,14 @@
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="Logof_Client.ResultWindow"
         Title="Ergebnis">
-    <Grid>
-        <DataGrid x:Name="DgResult" AutoGenerateColumns="True" />
+    <Grid Grid.ColumnDefinitions="200,*">
+        <Grid>
+            <Label Content="Filter" Margin="10,10,10,0" HorizontalAlignment="Stretch" VerticalAlignment="Top" />
+            <StackPanel x:Name="StpFilterOptions" Orientation="Vertical" HorizontalAlignment="Stretch"
+                        VerticalAlignment="Stretch" Margin="10,40,10,50" />
+            <Button x:Name="BtnUpdateFilter" Content="Aktualisieren" HorizontalAlignment="Stretch"
+                    VerticalAlignment="Bottom" Margin="10,0,10,10" Click="BtnUpdateFilter_OnClick" />
+        </Grid>
+        <DataGrid x:Name="DgResult" Grid.Column="1" AutoGenerateColumns="True" />
     </Grid>
 </Window>
