--- a/MainWindow.axaml
+++ b/MainWindow.axaml
@@ -40,7 +40,8 @@
                             <Label Content="Prüfen" VerticalContentAlignment="Center" FontSize="15" FontWeight="Bold" />
                         </StackPanel>
                     </Button>
-                    <Button HorizontalAlignment="Stretch" IsEnabled="False" HorizontalContentAlignment="Center"
+                    <Button HorizontalAlignment="Stretch" IsEnabled="True" HorizontalContentAlignment="Center"
+                            Click="BtnCombine_OnClick" x:Name="BtnCombine"
                             Margin="0,0,0,10">
                         <StackPanel Orientation="Horizontal">
                             <LucideIcon Kind="Combine" Width="36" Height="36" />
