[chore:] moved button

--- a/ResultWindow.axaml
+++ b/ResultWindow.axaml
@@ -14,8 +14,9 @@
                         VerticalAlignment="Stretch" Margin="10,80,10,0" />
             <!-- <Button x:Name="BtnUpdateFilter" Content="Aktualisieren" HorizontalAlignment="Stretch" -->
             <!--         VerticalAlignment="Bottom" Margin="10,0,10,10" Click="BtnUpdateFilter_OnClick" /> -->
-            <Button Content="Ausgewählte Anzeigen" x:Name="BtnShwoSelected" Click="BtnShwoSelected_OnClick"
-                    Margin="10,10,10,0" />
+            <Button Content="Ausgewählte Anzeigen" HorizontalAlignment="Stretch" VerticalAlignment="Bottom"
+                    x:Name="BtnShwoSelected" Click="BtnShwoSelected_OnClick"
+                    Margin="10,10,10,10" />
         </Grid>
         <DataGrid x:Name="DgResult" Grid.Column="1" AutoGenerateColumns="True" />
 
